--- a/SmartSafe/.envExample
+++ b/SmartSafe/.envExample
@@ -1,3 +1,3 @@
-VITE_WEB_NAME = "WEBSITENAME"
+VITE_TITLE = Smart
+VITE_SUBTITLE = Safe
 VITE_API_URL = http://ip:port
-VITE_MAILTRAP_TOKEN = your mailtrap token
