feat: adding login token and token verify for auth

--- a/Server/.envExample
+++ b/Server/.envExample
@@ -5,3 +5,4 @@ DB_NAME_ACCOUNTS: accounts db name
 MAILTRAP_TOKEN: your mailtrap Token
 JWT_SECRET: you secret
 CLIENT_URL: http://client side ip:port
+WEBMAIL: example@example.com
