--- a/SmartSafe/package.json
+++ b/SmartSafe/package.json
@@ -29,6 +29,8 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.10",
+		"@types/jsonwebtoken": "^9.0.9",
+		"jsonwebtoken": "^9.0.2",
 		"ol": "^10.4.0",
 		"tailwindcss": "^4.0.10"
 	}
