feat: adding profile pages and error 404 fix: improve login token verification
To-Do:
- Change the token verification database and algorithm to make it more efficient.
- Use localStorage to persist countdown state for OTP.
- Improve error handling for OTP verification.
- Add unit tests for OTP and logout functionality.

--- a/Server/.envExample
+++ b/Server/.envExample
@@ -5,4 +5,6 @@ DB_NAME_ACCOUNTS: accounts db name
 MAILTRAP_TOKEN: your mailtrap Token
 JWT_SECRET: you secret
 CLIENT_URL: http://client side ip:port
+REDIS_URL: yourip:port
+REDIS_PASSWORD: ussualy blank
 WEBMAIL: example@example.com
